@@ -36,12 +36,14 @@ Ver.5.7-dev (in development)
 - The mail sending php class Qdsmtp had constructors with deprecated way. They are changed current way.
 - IMLibPageNavigation.moveDetailOnceAgain() can re-move to current detail view. If you want to update datail area
   just current record, this API might be suitable.
+- Authenticated user generating script is added as dist-docs/passwdgen.sh. See the usege in it.
 - [BUG FIX] Fix to add multiple times for target node which has "#" started target description.
 - [BUG FIX] Replace the dataset property to set/get attribute methods for IE10.
 - [BUG FIX] Justify the next line handling in TEXTAREA tagged element for IE9.
 - [BUG FIX] Fix to disappear text and button name in the tag with data-im="_@update:..." or "_@addorder:...".
 - [BUG FIX] The Auth_Manager sample in Auth_Support folder didn't work. So the UserList.php is removed.
 - [BUG FIX] Master/Detail interface in mobile phone didn't return the master page from the detail page.
+- [BUG FIX] Record create method under authentication prevented the 'target' setting, and it is fiexed.
 
 Ver.5.6.1 (September 16, 2017)
 - Fix loading the page of the Practice "search (using JavaScript)".
